<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/tname"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@android:color/black"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nombre"
            android:inputType="text"
            android:hint="@string/identify"
            android:layout_below="@+id/tname"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:id="@+id/ttype"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@android:color/black"
            android:layout_below="@id/nombre"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ttype"
            android:layout_toRightOf="@id/ttype"
            android:id="@+id/spinner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adress"
            android:id="@+id/tadress"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/ttype"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:hint="@string/dirad"
            android:layout_below="@id/tadress"
            android:id="@+id/direccion" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:id="@+id/ttelefono"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_below="@+id/direccion"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/telefono"
            android:layout_below="@id/direccion"
            android:layout_toRightOf="@id/ttelefono"
            android:hint="@string/hphone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turl"
            android:id="@+id/turl"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_below="@id/telefono"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/url"
            android:layout_below="@id/turl"
            android:hint="@string/pagweb"
            android:inputType="textUri"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coment"
            android:id="@+id/tcoment"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/url"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/comentario"
            android:hint="@string/inotes"
            android:layout_below="@id/tcoment"/>


    </RelativeLayout>
</ScrollView>